--- a/app/views/todo_items/show.html.erb
+++ b/app/views/todo_items/show.html.erb
@@ -1,13 +1,15 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Due date:</strong>
-  <%= @todo_item.due_date %>
-</p>
+
+<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
   <%= @todo_item.title %>
+</p>
+
+<p>
+  <strong>Due date:</strong>
+  <%= @todo_item.due_date %>
 </p>
 
 <p>
@@ -20,5 +22,6 @@
   <%= @todo_item.completed %>
 </p>
 
-<%= link_to 'Edit', edit_todo_item_path(@todo_item) %> |
-<%= link_to 'Back', todo_items_path %>
+
+<%= link_to 'Edit', edit_todo_list_todo_item_path(@todo_list, @todo_item) %> |
+<%= link_to 'Back', @todo_list %>
